# rs-plugin-lookup-jackett

./: CLAUDE.md  Cargo.toml
.github/workflows/: release.yml
src/: error.rs  lib.rs
