[package]
name = "rs-plugin-lookup-jackett"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.4.1"
rs-plugin-common-interfaces = "0.20.5"
serde = "1.0.197"
strum = "0.27.2"
strum_macros = "0.27.2"
urlencoding = "2.1.3"
rs_torrent_magnet = "0.3.0"
unidecode = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
